fix UI name truncate

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -172,3 +172,11 @@
     transform: translateY(-6px);
   }
 }
+.truncate-2-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* Giới hạn 2 dòng */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis; /* Hiển thị dấu ... */
+  white-space: normal; /* Cho phép xuống dòng */
+}
